(FM-5119) updated tests IM on AIX

--- a/tests/files/download_uncompress_manifest.erb
+++ b/tests/files/download_uncompress_manifest.erb
@@ -1,7 +1,8 @@
-download_uncompress {'download_unzip_<%= cfilename %>':
-  download_base_url => "<%= installer_url %>",
-  distribution_name  => '<%= cfilename %>',
-  dest_folder   => '<%= dest_directory %>',
-  creates       => "<%= directory_path %>",
-  uncompress    => '<%= compress_type %>',
+download_uncompress {'download_unzip_<%= installer_url %>':
+  distribution_name  => "<%= installer_url %>",
+  dest_folder        => '<%= dest_directory %>',
+  creates            => "<%= directory_path %>",
+  uncompress         => '<%= compress_type %>',
+  user               => 'root',
+  group              => '<%= user_group %>',
 }
